video 9 AudioPlayer completo, corregido el nombre MedaPlayerTest a MediaPlayerTest

--- a/Prueba/res/values/strings.xml
+++ b/Prueba/res/values/strings.xml
@@ -3,5 +3,6 @@
 
     <string name="hello">Hello World, PruebaActivity!</string>
     <string name="app_name">Prueba</string>
+    <string name="play">Reproducir</string>
 
 </resources>
